--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 
 .dessert_places img {
   border-radius: 50%;
-  
+
   }
 
 
@@ -28,3 +28,36 @@ body {
     clear: both;
     display: table;
   }
+
+  .overlay-1 {
+    position: absolute;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+    background-color: #008CBA;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+  }
+
+  .img-container-1:hover .overlay-1 {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+
+  .text-1 {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
