added click to smooth scroll function

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,20 @@ body {
   }
 
 .info img {
-width: 200px
-
+  display: block;
+margin-left: auto;
+margin-right: auto;
+width: 40%;
 }
 
 .info h2 {
   font-family: cursive;
   text-align:center;
+}
+
+.info p {
+text-align:center
+
 }
 
 
