--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,7 @@ text-align:center
 
 }
 
-iframe {
-  display: none;
-}
+
 .img-container {
     float: left;
     width: 33.33%;
@@ -55,4 +53,11 @@ iframe {
       position: fixed;
       bottom: 0;
       left: 0;
+  }
+
+  iframe {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
   }
