added suggestion form and moved subscription button

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,16 @@ text-align:center
     clear: both;
     display: table;
   }
-  button {
+
+  .subscription_button {
       position: fixed;
       bottom: 0;
-      left: 0;
+      right: 0;
+  }
+
+  #submit {
+
+    position: relative;
   }
 
   iframe {
